# agent-workbench

./: .gitignore  AGENT_STATE.md  AUDIT-REPORT.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  agent-workbench  agent-workbench.desktop  codex-conversation-viewer  codex-conversation-viewer.desktop  install.sh  local_delegate_server.py  pyproject.toml
agent_workbench/: __init__.py  cli.py
cli-launchers/: claude  codex  gemini
